2002-10-26  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-base.c: removed unused struct type.

2002-10-21  Mikael Hallendal  <micke@codefactory.se>

	* Released 2.1.1

	* NEWS: updated for 2.1.1

	* configure.in: 
	- bumped version to 2.1.1
	- depend on gtkhtml2 2.1.1

2002-10-21  Richard Hult  <rhult@codefactory.se>

	* src/yelp-view-content.c (content_show_uri): Ditto.

	* src/yelp-view-index.c (index_show_uri): Put head tag around meta
	and title tags.

	* src/yelp-main.c (main): Remove unused variable.
	Include string.h to avoid warnings.

	* src/yelp-view-content.c (content_show_uri): Don't try to set
	focus on view, use view->widget.

	* src/yelp-view-toc.c (toc_get_html):
	* src/yelp-view-index.c (index_get_html):
	* src/yelp-view.c (yelp_view_get_html): Implement
	YelpView::get_html.

	* src/yelp-view.h: Add virtual function get_html that returns the
	YelpHtml used by the view.

	* src/yelp-html-gtkhtml2.c (yelp_html_find_next): Implement.

	* src/yelp-html.h (yelp_html_find_next): Add virtual function
	find_next.

	* src/yelp-window.c (window_find_cb): The start of find
	functionality, needs more work.
	(window_init): Remove unused view_current variable.

2002-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-db2html.c (main): trying to fix #93814 by checking the
	  return value from g_path_get_dirname.

	* src/Makefile.am (yelp_LDADD): link with POPT_LIBS. 

	* configure.in: Check for popt, fixes #96168

	* src/yelp-uri.c (yelp_uri_no_path): added, support to easy check
	  if URI is of type 'index:' without any path.

	* src/yelp-view-index.c (index_show_uri): Don't try loading if URI
	  is just 'index:'. Fixes #95877

2002-10-19  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-reader.c:
	(reader_start): no need to check for YELP_URI_TYPE_GHELP_OTHER
	  since it will never get here with that URI type.
	(yelp_reader_start): Check for file, unknown and ghelp_other and
	  display it with gnome_uri_show, fixes #95181, thanks Paolo for